feat: Swagger was added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prueba-de-desempeño-nestjs",
+  "name": "esports-arena-tournament-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
